[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py36"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.6"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
