[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"terminal_games/arcade.py" = ["E402"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
